<resources>
    <string name="app_name">Pantalla_animada</string>
    <string name="Version">Version 0.0</string>
    <string name="Copyright">Copyright © 2019</string>
    <string name="All_rights">All Rights Reserved</string>
    <string name="title_activity_tras_splash">TrasSplash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="emojiCasa">🏠</string>
    <string name="emoji">🏠</string>
    <string name="holaaaaaa">holaaaaaa</string>
    <string name="fragmento">Fragmento</string>
    <string name="play_game">Play Game</string>
    <string name="view_score">View Score</string>
    <string name="settings">Settings</string>
    <string name="help">HELP</string>
    <string name="main_menu">MAIN MENU</string>

</resources>
