<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94DDCC"
    tools:context=".menuMacia">

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="535dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/play_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/play_game"
            android:onClick="PlayGameClick"/>

        <Button
            android:id="@+id/viewScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/view_score"
            android:onClick="ViewScoreClick"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/settings"
            android:onClick="SettingsClick"/>

        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/help"
            android:onClick="HelpClick"/>
    </LinearLayout>

    <TextView
        android:id="@+id/titulito"
        android:layout_width="174dp"
        android:layout_height="52dp"
        android:text="@string/main_menu"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="25dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>