<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94DDCC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idversion"
        android:layout_width="74dp"
        android:layout_height="25dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:text="@string/Version"
        android:textColor="#0C0B0B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/idallRights"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idCopy"
        android:layout_width="133dp"
        android:layout_height="26dp"
        android:text="@string/Copyright"
        android:textColor="#0A0A0A"
        app:layout_constraintBottom_toBottomOf="@+id/idversion"
        app:layout_constraintStart_toEndOf="@+id/idversion" />

    <TextView
        android:id="@+id/idallRights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:text="@string/All_rights"
        android:textColor="#0A0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/idimagenTrivial"
        android:layout_width="134dp"
        android:layout_height="123dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginBottom="292dp"
        app:layout_constraintBottom_toTopOf="@+id/idversion"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/triviate" />
</androidx.constraintlayout.widget.ConstraintLayout>